--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
+    "filepond": "^4.32.9",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "jodit-react": "^5.2.19",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-filepond": "^7.1.3",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-player": "^3.3.2",
+    "react-router-dom": "^7.8.2",
+    "react-simple-star-rating": "^5.1.7",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -24,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "sass-embedded": "^1.92.1",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.2"
   }
