--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
+    "framer-motion": "^12.23.12",
     "jodit-react": "^5.2.19",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
